<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shared.RegisterActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/InputLabel" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name_input"
                style="@style/InputEditText"/>

            <TextView
                android:id="@+id/schoolTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_name"
                style="@style/InputLabel"/>

            <AutoCompleteTextView
                android:id="@+id/schoolEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/school_input"
                style="@style/InputEditText"/>

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                style="@style/InputLabel"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_input"
                style="@style/InputEditText"/>

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                style="@style/InputLabel"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_input"
                style="@style/InputEditText"/>

            <TextView
                android:id="@+id/confirmPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                style="@style/InputLabel"/>

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_input"
                style="@style/InputEditText"/>

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/register"
                android:textStyle="bold"
                style="@style/Button"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>