<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shared.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:background="@drawable/login_input"
            android:hint="@string/email_address"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/login_input"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="32dp"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/login_button"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/register_account"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:text="@string/student"
                android:textColor="@color/white"
                android:background="@drawable/login_button"
                android:elevation="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/instructor"
                android:background="@drawable/login_button"
                android:elevation="5dp"/>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>