<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".student.answer.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/questionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_label"
                    style="@style/AnswerLabel" />

                <TextView
                    android:id="@+id/questionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Question"
                    style="@style/AnswerDisplay" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/initialAnswerLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_answer_label"
                    style="@style/AnswerLabel" />

                <TextView
                    android:id="@+id/initialAnswerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Answer A"
                    style="@style/AnswerDisplay" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rationale_label"
                    style="@style/AnswerLabel" />

                <TextView
                    android:id="@+id/rationaleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rationale"
                    style="@style/AnswerDisplay" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_answer_label"
                    style="@style/AnswerLabel" />

                <TextView
                    android:id="@+id/finalAnswerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Answer B"
                    style="@style/AnswerDisplay" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correct_answer_label"
                    style="@style/AnswerLabel" />

                <TextView
                    android:id="@+id/correctAnswerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Answer B"
                    style="@style/AnswerDisplay" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    style="@style/AnswerLabel"
                    android:text="@string/ratings_label"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        style="@style/AnswerDisplay"
                        android:text="@string/rating_1"
                        android:layout_gravity="center_vertical"/>

                    <SeekBar
                        android:id="@+id/ratingOneSeekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:max="10"
                        android:maxHeight="20dp"
                        android:minHeight="20dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:alpha="0.3"
                    android:layout_margin="4dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        style="@style/AnswerDisplay"
                        android:text="@string/rating_2"
                        android:layout_gravity="center_vertical"/>

                    <SeekBar
                        android:id="@+id/ratingTwoSeekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:max="10"
                        android:maxHeight="20dp"
                        android:minHeight="20dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:alpha="0.3"
                    android:layout_margin="4dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        style="@style/AnswerDisplay"
                        android:text="@string/rating_3"
                        android:layout_gravity="center_vertical"/>

                    <SeekBar
                        android:id="@+id/ratingThreeSeekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:max="10"
                        android:maxHeight="20dp"
                        android:minHeight="20dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:alpha="0.3"
                    android:layout_margin="4dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        style="@style/AnswerDisplay"
                        android:text="@string/rating_4"
                        android:layout_gravity="center_vertical"/>

                    <SeekBar
                        android:id="@+id/ratingFourSeekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:max="10"
                        android:maxHeight="20dp"
                        android:minHeight="20dp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textStyle="bold"
            android:layout_margin="5dp"
            style="@style/Button"/>

    </LinearLayout>

</ScrollView>
